--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <p>Arcadia is under attack!</p>
         <p>Little Unicorn Lili is trying to save her homeland!</p>
         <button id="start-button" class="btn">Start Game</button>
-        <p id="instructor">Use the up and down arrow to control the unicorn!</p>
+        <p id="instructor">
+          Use the arrows to control the unicorn and space to shoot!
+        </p>
       </div>
       <!-- stage1 page -->
       <div>
