--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <h2>Level <span id="current-level">1</span></h2>
               <p>Score: <span id="score"> 0</span></p>
               <p>Lives: <span id="lives"> 3</span></p>
+              <p id="beach">We shall fight them on the beaches...</p>
             </div>
             <!-- set it in css -->
           </div>
